# Ultraloader

./: .gitignore  404.html  ReadMe.md  conftest.py  env.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: black.yml  docs.yml  tests.yml
docs/: index.md
scratch/: combine_files_for_upload.py  get_lead_data.py  get_org_id.py  jank_stuff.py  logging.py  pull_salesforce_data.py  scrub_contacts.py  sfdc_to_snowflake.py  tenacity_testing.py
scripts/: create_private_key_pair.sh
search/: search_index.json
tests/: test_auth.py
tests/test_creds/: server.crt  server.csr  server.key  server.pass.key
ultra/: __main__.py  auth.py  bulk2.py  config.py  exceptions.py  file_operations.py  ingest.py  query.py  sfjwt.py
ultraloader/: __main__.py  bulk2.py  config.py  sfjwt.py
