[tool.poetry]
name = "ultra"
version = "0.2.3"
description = ""
authors = ["Rehket <aalbright425@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
httpx = "^0.20.0"
pydantic = "^1.8.2"
PyJWT = {extras = ["crypto"], version = "^2.3.0"}
cryptography = "^35.0.0"
rich = "^10.12.0"
aiomultiprocess = "^0.9.0"
aiofiles = "^0.7.0"
fastapi = "^0.70.0"
typer = "^0.4.0"
tenacity = "^8.0.1"
better-exceptions = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
