[tool.poetry]
name = "ultra"
version = "0.2.16"
description = ""
authors = ["Rehket <aalbright425@gmail.com>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7.2"
httpx = "^0.21.0"
pydantic = "^1.8.2"
PyJWT = {extras = ["crypto"], version = "^2.3.0"}
cryptography = "^35.0.0"
rich = "^10.12.0"
aiomultiprocess = "^0.9.0"
aiofiles = "^0.7.0"
fastapi = "^0.70.0"
typer = "^0.4.0"
tenacity = "^8.0.1"
better-exceptions = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
respx = "^0.19.2"
pytest-mock = "^3.8.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
mkdocs = "^1.3.1"
mkdocs-material = "^8.4.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
